<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cz.muni.ics.kypo</groupId>
    <artifactId>kypo-training</artifactId>
    <version>2.5.0</version>
    <packaging>pom</packaging>

    <name>KYPO Training</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
    </parent>

    <properties>
        <java.version>17</java.version>
        <proprietary-repo-id>gitlab-maven</proprietary-repo-id>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <kypo-security-commons.version>2.0.0</kypo-security-commons.version>
        <kypo-elasticsearch-documents.version>2.1.0-rc.1</kypo-elasticsearch-documents.version>
        <swagger.version>2.9.2</swagger.version>
        <swagger-annotations.version>1.5.22</swagger-annotations.version>
        <swagger.directory>${basedir}/../doc-files</swagger.directory>
        <swagger.skip>true</swagger.skip>
        <swagger.host>localhost:8083</swagger.host>
        <github.kongchen.version>3.1.8</github.kongchen.version>
        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
        <modelmapper.version>2.3.4</modelmapper.version>
        <squiggly.filter.jackson.version>1.3.18</squiggly.filter.jackson.version>
        <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
        <concurrent-junit.version>1.0.2</concurrent-junit.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <!-- added to avoid log4j2 vulnerability CVE-2021-44228 -->
        <log4j2.version>2.15.0</log4j2.version>
        <commons-math3.version>3.1.1</commons-math3.version>
        <spring-data-commons.version>2.6.2</spring-data-commons.version>
    </properties>

    <repositories>
        <repository>
            <id>${proprietary-repo-id}</id>
            <url>${proprietary-repo-url}</url>
        </repository>
    </repositories>

    <!-- specifies versions not defined by the Spring boot platform -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cz.muni.ics.kypo</groupId>
                <artifactId>kypo-elasticsearch-documents</artifactId>
                <version>${kypo-elasticsearch-documents.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.muni.ics.kypo</groupId>
                <artifactId>kypo-security-commons</artifactId>
                <version>${kypo-security-commons.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <!--mapping entities to DTO -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.modelmapper</groupId>
                <artifactId>modelmapper</artifactId>
                <version>${modelmapper.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vmlens</groupId>
                <artifactId>concurrent-junit</artifactId>
                <version>${concurrent-junit.version}</version>
            </dependency>
            <!-- filtering REST respons -->
            <dependency>
                <groupId>com.github.bohnman</groupId>
                <artifactId>squiggly-filter-jackson</artifactId>
                <version>${squiggly.filter.jackson.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <!-- cluster analysis visualization-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>${commons-math3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons</artifactId>
                <version>${spring-data-commons.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <modules>
        <module>kypo-persistence-training</module>
        <module>kypo-service-training</module>
        <module>kypo-rest-training</module>
        <module>kypo-elasticsearch-training</module>
        <module>kypo-api-training</module>
    </modules>
</project>

